# JackPoker

./: CMakeLists.txt  MANIFEST.in  README.md  setup.py
include/: RoyalCards.h  RoyalHand.h  royal-bit-utils.h
src/: CMakeLists.txt  RoyalCards.cpp  RoyalHand.cpp
tests/: CMakeLists.txt  TestRoyalBitUtils.cpp
